# mac-os-ansible

./: pyproject.toml
ansible/: ansible.cfg
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: deploy.yml
ansible/roles/configure_omzsh/defaults/: main.yml
ansible/roles/configure_omzsh/tasks/: main.yml
ansible/roles/deploy_dotfiles/defaults/: main.yml
ansible/roles/deploy_dotfiles/files/: .p10k.zsh
ansible/roles/deploy_dotfiles/tasks/: main.yml
ansible/roles/deploy_zshrc/defaults/: main.yml
ansible/roles/deploy_zshrc/tasks/: main.yml
ansible/roles/deploy_zshrc/templates/: zshrc.j2
ansible/roles/install_brew_packages/defaults/: main.yml
ansible/roles/install_brew_packages/tasks/: main.yml
