[project]
name = "mac-os-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "ripple",email = "github@ripple.contact"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ansible-core (>=2.20.0,<3.0.0)",
    "ansible-lint (>=25.11.1,<26.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
